--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,58 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* adds smooth scroll effect to make the page section transitions more gently*/
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0 auto;
+  max-width: 40em;
+  text-align: center;
+
+  line-height: 1.5;
+  padding: 4em 1em;
+  font-size: 14px;
+  font-family: Helvetica, Arial, sans-serif;
+
+  color: #555;
+}
+
+h1 {
+  margin-top: 1em;
+  padding-top: 1em;
+  margin-bottom: 1em;
+  color: #333;
+}
+
+h1 span {
+  margin-top: -10em;
+  padding-bottom: 10em;
+  display: block;
+}
+
+
+.header {
+  height: 50px;
+}
+
+.page-section {
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  margin: 0;
+  padding: 0;
+}
+
+.link-choices {
+  margin-top: 2em;
+  display: flex;
+  justify-content: space-around;
+}
