--- a/styles-2.css
+++ b/styles-2.css
@@ -74,3 +74,15 @@ a:hover {
 .link-choices > a:last-of-type {
   margin-left: 60px;
 }
+
+@media only screen and (max-width: 450px) {
+  .page-section {
+    height: 800px;
+  }
+
+  h1 span {
+    margin-top: -5em;
+    padding-bottom: 5em;
+    display: block;
+  }
+}
